--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# fm0850020_db_user
+# hkmK1bMRLYoKwXj9
+# mongodb+srv://fm0850020_db_user:hkmK1bMRLYoKwXj9@cluster0.1mbzfrj.mongodb.net/?appName=Cluster0
